force-app/main/default/objects/ssot__ContactPointApp__dlm/fields/ssot__ApplicationLoginId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ApplicationLoginId__c</fullName>
    <label>Application Login Id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ApplicationLoginId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>