force-app/main/default/objects/ssot__ContactPointApp__dlm/fields/ssot__DeviceEndPointId__c.field-meta.xml
<CustomField>
    <fullName>ssot__DeviceEndPointId__c</fullName>
    <label>Device End Point</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DeviceEndPointId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>