force-app/main/default/objects/ssot__ContactPointApp__dlm/fields/ssot__ForPersonalUse__c.field-meta.xml
<CustomField>
    <fullName>ssot__ForPersonalUse__c</fullName>
    <label>For Personal Use</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ForPersonalUse</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>