force-app/main/default/objects/ssot__ContactPointApp__dlm/fields/ssot__rel_1697761159645_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761159645_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContactPointApp_DeviceId_map_Device__rel</label>
    <referenceTo>ssot__Device__dlm</referenceTo>
    <relationshipLabel>ContactPointApp_DeviceId_map_Device__rel</relationshipLabel>
    <relationshipName>rel_1697761159645_end</relationshipName>
    <type>Lookup</type>
</CustomField>