force-app/main/default/objects/ssot__ContactPointApp__dlm/fields/ssot__rel_1697761160558_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761160558_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContactPointApp_PartyId_map_Individu_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>ContactPointApp_PartyId_map_Individu_rel</relationshipLabel>
    <relationshipName>rel_1697761160558_end</relationshipName>
    <type>Lookup</type>
</CustomField>