force-app/main/default/objects/ssot__ContactPointApp__dlm/fields/ssot__ssot_Id_map_ssot_Id_16299040167734__c.field-meta.xml
<CustomField>
    <fullName>ssot__ssot_Id_map_ssot_Id_16299040167734__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ssot_Id_map_ssot_Id_16299040167734</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>ssot_Id_map_ssot_Id_16299040167734</relationshipLabel>
    <relationshipName>ssot_Id_map_ssot_Id_16299040167734</relationshipName>
    <type>Lookup</type>
</CustomField>